src/objects/Price_File_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Field_Name__c</fullName>
        <label>Error Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Messages__c</fullName>
        <label>Error Messages</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_File_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_File_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price File Mapping</label>
        <referenceTo>Price_File_Mapping__c</referenceTo>
        <relationshipLabel>Price File Error Logs</relationshipLabel>
        <relationshipName>Price_File_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Summary Log</label>
        <referenceTo>Summary_Log__c</referenceTo>
        <relationshipLabel>Price File Error Logs</relationshipLabel>
        <relationshipName>Price_File_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price File Error Logs</relationshipLabel>
        <relationshipName>Price_File_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price File Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Field_Name__c</columns>
        <columns>Error_Messages__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PFE-{00000000}</displayFormat>
        <label>Price File Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price File Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>